# buttondeck

./: .gitignore  Cargo.toml
demo/: config_v_0_2.json  config_v_0_3.json  config_v_0_4.json  midi.json  panoo.json  stream_deck_mini.json
examples/: demo.rs  fire.rs  midi.rs  panoo.rs
midi/: deck.json
src/: button.rs  deck.rs  device.rs  error.rs  hardware.rs  lib.rs  setup.rs  sx.rs
src/device/: midideck.rs  mod.rs  streamdeck.rs
