[package]
name = "buttondeck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
env_logger = "0.10.2"
thiserror = "*"
indexmap = { version = "1.9.2", features = ["serde-1"] }
serde = "1.0.150"
serde_derive = "1.0.150"
serde_json = { version = "1.0.89", features = [ "preserve_order" ] }
hidapi = { version = "2.4", features = ["linux-static-libusb"], default-features = false }
# streamdeck  = "0.7.0"
# streamdeck  = { git = "https://github.com/maotv/rust-streamdeck.git", rev = "dd1c4602bc7e4f2a88cf0f5ca2bc1a04314953ad" }
bitstream-io = "~2.3.0"
ravif = "=0.11.5"
streamdeck  = { git = "https://github.com/maotv/rust-streamdeck.git", rev = "4f6483bdc3ce20ef5678c3df6dad1e79db9591b7" }
midir = "0.8.0"
wmidi = "4.0.6"
[[example]]
name = "demo"
